Fixing header overflow & refactor header & footer css

--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -10,6 +10,13 @@
   -o-transform-style: preserve-3d;
   transform-style: preserve-3d; }
 
+@media (max-width: 600px) {
+    #cubeContainer {
+      width: 300px;
+      height: 300px;
+  }
+}
+
 #cubeContainer {
   width: 400px;
   height: 400px;
